--- a/index.html
+++ b/index.html
@@ -10,8 +10,23 @@
 </head>
 <body>
 
-  <header>
-    
+  <header class="d-flex align-items-center py-3">
+    <div class="header-logo">
+      <figure class="m-0">
+        <img src="./img/mobile-logo.png" class="img-fluid">
+      </figure>
+    </div>
+    <div class="header-searchbar flex-grow-1">
+      <input type="search" class="w-100 py-2" placeholder="Prova a cercare: Lezioni di Laravel"> 
+    </div>
+    <div class="header-options">
+      <ul class="m-0 d-flex gap-3">
+        <li><i class="fa-solid fa-list"></i></li>
+        <li><i class="fa-solid fa-circle-question"></i></li>
+        <li><i class="fa-solid fa-ellipsis-vertical"></i></li>
+        <li><i class="fa-solid fa-bell pe-3"></i></li>
+      </ul>
+    </div>
   </header>
 
   <main>
