--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/f1f0c66429.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="d-flex flex-column">
 
   <header class="d-flex align-items-center py-3">
+    <!-- logo -->
     <div class="header-logo">
-      <figure class="m-0">
+      <figure class="mb-0">
         <img src="./img/mobile-logo.png" class="img-fluid">
       </figure>
     </div>
+    <!-- searchbar -->
     <div class="header-searchbar flex-grow-1">
       <input type="search" class="w-100 py-2" placeholder="Prova a cercare: Lezioni di Laravel"> 
     </div>
+    <!-- icone header -->
     <div class="header-options">
-      <ul class="m-0 d-flex gap-3">
+      <ul class="mb-0 d-flex gap-3">
         <li><i class="fa-solid fa-list"></i></li>
         <li><i class="fa-solid fa-circle-question"></i></li>
         <li><i class="fa-solid fa-ellipsis-vertical"></i></li>
@@ -29,22 +32,29 @@
     </div>
   </header>
 
-  <main>
-    <aside class="sidebar">
-
-    </aside>
-
+  <main class="flex-grow-1">
+    <!-- navbar -->
+      <nav class="sidebar d-flex flex-column justify-content-between align-items-center pt-4 flex-shrink-0">
+        <ul class="mb-0 ps-0 sidebar-icons d-flex flex-column gap-3">
+          <li>
+            <i class="fa-solid fa-house"></i><span class="sidebar-text ps-1">Home</span>
+          </li>
+          <li>
+            <i class="fa-solid fa-chart-simple"></i><span class="sidebar-text ps-2">Stats</span>
+          </li>
+          <li>
+            <i class="fa-solid fa-signal"></i><span class="sidebar-text">Signals</span>
+          </li>
+        </ul>
+        <div class="sidebar-settings d-flex align-items-center gap-2 pb-4">
+          <i class="fa-solid fa-gear"></i><span class="sidebar-text">Admin</span>
+        </div>
+      </nav>
+      <!-- contenuto principale -->
     <div class="main-content">
 
     </div>
   </main>
-
-
-
-
-
-
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
