--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 </head>
 <body class="d-flex flex-column">
 
-  <header class="d-flex align-items-center py-3">
+  <header class="d-flex align-items-center py-3 gap-3">
     <!-- logo -->
     <div class="header-logo">
-      <figure class="mb-0">
+      <figure class="mb-0 d-lg-none">
         <img src="./img/mobile-logo.png" class="img-fluid">
+      </figure>
+      <figure class="mb-0 d-none d-lg-block">
+        <img src="./img/logo.svg">
       </figure>
     </div>
     <!-- searchbar -->
@@ -23,36 +26,79 @@
     </div>
     <!-- icone header -->
     <div class="header-options">
-      <ul class="mb-0 d-flex gap-3">
-        <li><i class="fa-solid fa-list"></i></li>
-        <li><i class="fa-solid fa-circle-question"></i></li>
-        <li><i class="fa-solid fa-ellipsis-vertical"></i></li>
-        <li><i class="fa-solid fa-bell pe-3"></i></li>
+      <ul class="mb-0 ps-0 d-flex gap-3">
+        <li><a href=""><i class="fa-solid fa-list"></i></a></li>
+        <li><a href=""><i class="fa-solid fa-circle-question"></i></a></li>
+        <li><a href=""><i class="fa-solid fa-ellipsis-vertical"></i></a></li>
+        <li><a href=""><i class="fa-solid fa-bell pe-3"></i></a></li>
       </ul>
     </div>
   </header>
 
-  <main class="flex-grow-1">
+  <main class="flex-grow-1 d-flex">
     <!-- navbar -->
       <nav class="sidebar d-flex flex-column justify-content-between align-items-center pt-4 flex-shrink-0">
         <ul class="mb-0 ps-0 sidebar-icons d-flex flex-column gap-3">
           <li>
-            <i class="fa-solid fa-house"></i><span class="sidebar-text ps-1">Home</span>
+            <a href=""><i class="fa-solid fa-house"></i></a><a href=""><span class="sidebar-text ps-1">Home</span></a>
           </li>
           <li>
-            <i class="fa-solid fa-chart-simple"></i><span class="sidebar-text ps-2">Stats</span>
+            <a href=""><i class="fa-solid fa-chart-simple"></i></a><a href=""><span class="sidebar-text ps-2">Stats</span></a>
           </li>
           <li>
-            <i class="fa-solid fa-signal"></i><span class="sidebar-text">Signals</span>
+            <a href=""><i class="fa-solid fa-signal"></i></a><a href=""><span class="sidebar-text">Signals</span></a>
           </li>
         </ul>
         <div class="sidebar-settings d-flex align-items-center gap-2 pb-4">
-          <i class="fa-solid fa-gear"></i><span class="sidebar-text">Admin</span>
+          <a href=""><i class="fa-solid fa-gear"></i></a><a href=""><span class="sidebar-text">Admin</span></a>
         </div>
       </nav>
-      <!-- contenuto principale -->
-    <div class="main-content">
 
+      <!-- contenuto principale -->
+
+      <!-- parte alta contenuto principale -->
+    <div class="main-content flex-grow-1">
+      <div class="main-top py-4">
+        <div class="container-fluid">
+          <div class="row row-gap-4">
+            <!-- prima colonna -->
+            <div class=" col-md-4 col-lg-2 order-md-3">
+              <div class="new-student d-flex align-items-center gap-4">
+                <p class="mb-0 fw-semibold">Nuovo Studente</p>
+                <i class="fa-solid fa-plus"></i>
+              </div>
+            </div>
+            <!-- seconda colonna -->
+            <div class=" col-md-4 col-lg-6 order-md-1">
+              <div class="boolean">
+                <div class="boolean-blaze d-flex gap-2 align-items-end mb-2">
+                  <h2 class="mb-0">Boolean</h2>
+                  <span class="badge">Piano blaze</span>
+                </div>
+                <div class="boolean-badges">
+                  <span class="badge">3 app</span>
+                  <i class="fa-solid fa-angles-right"></i>
+                  <span class="badge d-lg-none">+</span>
+                  <span class="badge d-sm-none d-lg-inline-block">Boolean mobile app</span>
+                  <span class="badge d-sm-none d-lg-inline-block">Boolean web app</span>
+                  <span class="badge d-sm-none d-lg-inline-block">Boolean blog app</span>
+                </div>
+              </div>
+            </div>
+            <!-- terza colonna -->
+            <div class=" col-md-4 col-lg-4 order-md-2">
+              <div class="online-students">
+                <p class="fw-semibold mb-1">Studenti online negli ultimi 30 minuti</p>
+                <p class="fw-semibold fs-2 mb-0">125</p>
+              </div>
+            </div>  
+          </div>
+        </div>
+      </div>
+      <!-- parte bassa contenuto principale -->
+      <div class="main-body">
+
+      </div>
     </div>
   </main>
 
