Fixed table in main content, resa già responsive

--- a/index.html
+++ b/index.html
@@ -120,40 +120,183 @@
                     <thead>
                       <tr>
                         <th scope="col">Nome</th>
-                        <th scope="col">Data di inizio</th>
-                        <th scope="col">RDI</th>
+                        <th scope="col" class="d-none d-md-table-cell">Data di inizio</th>
+                        <th scope="col" class="d-none d-md-table-cell">RDI</th>
                         <th scope="col">Stato</th>
                         <th scope="col">Azioni</th>
                       </tr>
                     </thead>
                     <!-- table body -->
                     <tbody>
+                      <!-- classe 75 -->
                       <tr>
-                        <th scope="row">Classe 75</th>
+                        <th scope="row">
+                          <div class="class-img">
+                            <figure>
+                              <img src="./img/class-avatar.jpg" class="img-fluid">
+                            </figure>
+                            <span>
+                              Classe 75
+                            </span>
+                          </div>
+                        </th>
                         <td>15 Febbraio 2023</td>
                         <td>20%</td>
                         <td><span class="badge text-bg-success">Done</span></td>
-                        <td>c</td>
+                        <td>
+                          <i class="fa-solid fa-pencil border p-2"></i>
+                          <i class="fa-solid fa-trash border p-2"></i>
+                        </td>
                       </tr>
+                      <!-- classe 76 -->
                       <tr>
-                        <th scope="row">Classe 76</th>
+                        <th scope="row">
+                          <div class="class-img">
+                            <figure>
+                              <img src="./img/class-avatar.jpg" class="img-fluid">
+                            </figure>
+                            <span>
+                              Classe 76
+                            </span>
+                          </div>
+                        </th>
                         <td>16 Febbraio 2023</td>
                         <td>20%</td>
                         <td><span class="badge text-bg-success">Done</span></td>
-                        <td>c</td>
+                        <td>
+                          <i class="fa-solid fa-pencil border p-2"></i>
+                          <i class="fa-solid fa-trash border p-2"></i>
+                        </td>
                       </tr>
+                      <!-- classe 77 -->
                       <tr>
-                        <th scope="row">Classe 77</th>
+                        <th scope="row">
+                          <div class="class-img">
+                            <figure>
+                              <img src="./img/class-avatar.jpg" class="img-fluid">
+                            </figure>
+                            <span>
+                              Classe 77
+                            </span>
+                          </div>
+                        </th>
                         <td >17 Febbraio 2023</td>
                         <td>20%</td>
-                        <td><span class="badge text-bg-warning">Progress</span></td>
-                        <td>c</td>
+                        <td><span class="badge text-bg-warning text-light">Progress</span></td>
+                        <td>
+                          <i class="fa-solid fa-pencil border p-2"></i>
+                          <i class="fa-solid fa-trash border p-2"></i>
+                        </td>
                       </tr>
+                      <!-- classe 78 -->
+                      <tr>
+                        <th scope="row">
+                          <div class="class-img">
+                            <figure>
+                              <img src="./img/class-avatar.jpg" class="img-fluid">
+                            </figure>
+                            <span>
+                              Classe 78
+                            </span>
+                          </div>
+                        </th>
+                        <td >18 Febbraio 2023</td>
+                        <td>20%</td>
+                        <td><span class="badge text-bg-success">Done</span></td>
+                        <td>
+                          <i class="fa-solid fa-pencil border p-2"></i>
+                          <i class="fa-solid fa-trash border p-2"></i>
+                        </td>
+                      </tr>
+                      <!-- classe 79 -->
+                      <tr>
+                        <th scope="row">
+                          <div class="class-img">
+                            <figure>
+                              <img src="./img/class-avatar.jpg" class="img-fluid">
+                            </figure>
+                            <span>
+                              Classe 79
+                            </span>
+                          </div>
+                        </th>
+                        <td >19 Febbraio 2023</td>
+                        <td>20%</td>
+                        <td><span class="badge text-bg-danger">Failed</span></td>
+                        <td>
+                          <i class="fa-solid fa-pencil border p-2"></i>
+                          <i class="fa-solid fa-trash border p-2"></i>
+                        </td>
+                      </tr>
+                      <!-- classe 80 -->
+                      <tr>
+                        <th scope="row">
+                          <div class="class-img">
+                            <figure>
+                              <img src="./img/class-avatar.jpg" class="img-fluid">
+                            </figure>
+                            <span>
+                              Classe 80
+                            </span>
+                          </div>
+                        </th>
+                        <td >20 Febbraio 2023</td>
+                        <td>20%</td>
+                        <td><span class="badge text-bg-success">Done</span></td>
+                        <td>
+                          <i class="fa-solid fa-pencil border p-2"></i>
+                          <i class="fa-solid fa-trash border p-2"></i>
+                        </td>
+                      </tr>
+                      <!-- classe 81 -->
+                      <tr>
+                        <th scope="row">
+                          <div class="class-img">
+                            <figure>
+                              <img src="./img/class-avatar.jpg" class="img-fluid">
+                            </figure>
+                            <span>
+                              Classe 81
+                            </span>
+                          </div>
+                        </th>
+                        <td >21 Febbraio 2023</td>
+                        <td>20%</td>
+                        <td><span class="badge text-bg-danger">Failed</span></td>
+                        <td>
+                          <i class="fa-solid fa-pencil border p-2"></i>
+                          <i class="fa-solid fa-trash border p-2"></i>
+                        </td>
+                      </tr>
+                      <!-- classe 82 -->
+                      <tr>
+                        <th scope="row">
+                          <div class="class-img">
+                            <figure>
+                              <img src="./img/class-avatar.jpg" class="img-fluid">
+                            </figure>
+                            <span>
+                              Classe 82
+                            </span>
+                          </div>
+                        </th>
+                        <td >22 Febbraio 2023</td>
+                        <td>20%</td>
+                        <td><span class="badge text-bg-success">Done</span></td>
+                        <td>
+                          <i class="fa-solid fa-pencil border p-2"></i>
+                          <i class="fa-solid fa-trash border p-2"></i>
+                        </td>
+                      </tr>                                          
                     </tbody>
                   </table>
                 </div>
               </div>
               <!-- fine le prossime classi -->
+
+              <!-- inizio faq -->
+              
+              <!-- fine faq -->
             </div>
 
             <!-- parte destra main content -->
