--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="col-lg-8">
 
               <!-- le prossime classi -->
-              <div class="wrapper border mt-4 pb-3">
+              <div class="wrapper">
                 <div class="title-component">
                   <h2>Prossime classi</h2>
                 </div>
@@ -295,7 +295,47 @@
               <!-- fine le prossime classi -->
 
               <!-- inizio faq -->
-              
+              <div class="wrapper">
+                <div class="title-component">
+                  <h2 class="text-uppercase">f.a.q</h2>
+                </div>
+                <div class="faq">
+                  <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                         Come aggiungere un nuovo studente?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam possimus quos mollitia eum voluptatem facilis quo saepe. Unde, odit similique.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                          Come posso accedere alle informazioni del mio account?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, nihil repellat voluptatum debitis soluta doloremque magnam maiores consequuntur quisquam dolorum.</div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                          Posso usare questa dashboard da mobile?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae id excepturi illo voluptatibus perferendis perspiciatis ullam ad esse expedita provident!</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <!-- fine faq -->
             </div>
 
