ADD-To do list in html e css, già responsive

--- a/index.html
+++ b/index.html
@@ -341,7 +341,32 @@
 
             <!-- parte destra main content -->
             <div class="col-lg-4">
-              c
+
+              <!-- to do list -->
+              <div class="wrapper pb-0">
+                <div class="title-component">
+                  <h2>Todo</h2>
+                </div>
+                <ul class="list-group p-3">
+                  <li class="list-group-item">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    Kickoff nuove classi
+                  </li>
+                  <li class="list-group-item">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    Lezione su Bootstrap 5 in classe #75
+                  </li>
+                  <li class="list-group-item">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    Controllare username github studenti
+                  </li>
+                </ul>
+              </div>
+              <!-- fine to do list -->
+
+              <!-- utenti attivi -->
+              
+              <!-- fine utenti attivi -->
             </div>
           </div>
         </div>
