--- a/index.html
+++ b/index.html
@@ -21,24 +21,40 @@
         <img src="./img/mobile-logo.png" class="img-fluid">
       </figure>
       <figure class="mb-0 d-none d-lg-block">
-        <img src="./img/logo.svg">
+        <img src="./img/logo.svg" class="ps-2">
       </figure>
     </div>
     <!-- searchbar -->
     <div class="header-searchbar flex-grow-1">
-      <input type="search" class="w-100 py-2" placeholder="Prova a cercare: Lezioni di Laravel">
+      <input type="search" class="w-100 py-2" placeholder=" Prova a cercare: Lezioni di Laravel">
+      <span class="search-icon"><i class="fa-solid fa-magnifying-glass"></i></span>
     </div>
     <!-- icone header -->
     <div class="header-options">
       <ul class="mb-0 ps-0 d-flex gap-3">
-        <li><a href=""><i class="fa-solid fa-list"></i></a></li>
-        <li><a href=""><i class="fa-solid fa-circle-question"></i></a></li>
-        <li><a href=""><i class="fa-solid fa-ellipsis-vertical"></i></a></li>
-        <li><a href=""><i class="fa-solid fa-bell pe-3"></i></a></li>
+        <li class="d-none d-lg-flex"><a href=""><i class="fa-solid fa-list"></i></a></li>
+        <li class="d-none d-lg-flex"><a href=""><i class="fa-solid fa-circle-question"></i></a></li>
+        <li class="d-none d-lg-flex"><a href=""><i class="fa-solid fa-ellipsis-vertical"></i></a></li>
+        <li class="dropdown">
+          <button class="btn p-0 pb-1 pe-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fa-solid fa-bell"></i>
+          </button>
+          <ul class="dropdown-menu me-3">
+            <li><button class="dropdown-item" type="button">Profilo</button></li>
+            <li>
+              <button class="dropdown-item" type="button">Fatturazione</button>
+            </li>
+            <li>
+              <button class="dropdown-item" type="button">
+                Logout
+              </button>
+            </li>
+          </ul>
+        </li>
       </ul>
     </div>
   </header>
-<!-------------------------------MAIN-------------------------------->
+  <!-------------------------------MAIN-------------------------------->
 
   <main class="flex-grow-1 d-flex">
     <!-- navbar -->
@@ -55,7 +71,7 @@
           <a href=""><i class="fa-solid fa-signal"></i></a><a href=""><span class="sidebar-text">Signals</span></a>
         </li>
       </ul>
-      <div class="sidebar-settings d-flex align-items-center gap-2 pb-4">
+      <div class="sidebar-settings d-flex align-items-center gap-2 mb-4 p-2">
         <a href=""><i class="fa-solid fa-gear"></i></a><a href=""><span class="sidebar-text">Admin</span></a>
       </div>
     </nav>
@@ -71,7 +87,111 @@
             <div class=" col-md-4 col-lg-2 order-md-3">
               <div class="new-student d-flex align-items-center gap-4">
                 <p class="mb-0 fw-semibold">Nuovo Studente</p>
-                <i class="fa-solid fa-plus"></i>
+                <!-- offcanvas -->
+                <a class="btn btn-primary p-0" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+                  <i class="fa-solid fa-plus"></i>
+                </a>
+          
+                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+                  <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasExampleLabel">Inserisci un nuovo studente</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                  </div>
+                  <div class="offcanvas-body">
+                    <div class="new-student-form">
+                      <!-- nome e cognome -->
+                      <div class="container-fluid mb-3">
+                        <div class="row">
+                          <div class="col-6">
+                            <div class="name">
+                              <p class="mb-2">Nome</p>
+                              <input type="text" class="w-100 form-control">
+                            </div>  
+                          </div>
+                          <div class="col-6">
+                            <div class="surname">
+                              <p class="mb-2">Cognome</p>
+                              <input type="text" class="w-100 form-control">
+                            </div>  
+                          </div>
+                        </div>
+                      </div>
+                      <!-- email e password -->
+                      <div class="container-fluid mb-3">
+                        <div class="row">
+                          <div class="col-6">
+                            <div class="name">
+                              <p class="mb-2">Email</p>
+                              <div class="input-group flex-nowrap">
+                                <span class="input-group-text" id="addon-wrapping">@</span>
+                                <input type="text" class="form-control" aria-label="Username" aria-describedby="addon-wrapping">
+                              </div>
+                            </div>  
+                          </div>
+                          <div class="col-6">
+                            <div class="surname">
+                              <p class="mb-2">Password</p>
+                              <input type="text" class="w-100 form-control">
+                            </div>  
+                          </div>
+                        </div>
+                      </div>
+                      <!-- Indirizzo -->
+                      <div class="container-fluid mb-3">
+                        <p class="mb-2">Indirizzo</p>
+                        <input type="text" class="w-100 form-control">
+                      </div>
+                      <!-- Città, Stato CAP -->
+                      <div class="container-fluid mb-3">
+                        <div class="row">
+                          <div class="col-6">
+                            <div class="city">
+                              <p class="mb-2">Città</p>
+                              <input type="text" class="form-control">
+                            </div>
+                          </div>
+                          <div class="col-4">
+                            <p class="mb-2">Stato</p>
+                            <select class="form-select" id="inputGroupSelect01">
+                              <option selected>Scegli...</option>
+                              <option value="1">Italia</option>
+                              <option value="2">Svizzera</option>
+                              <option value="3">Germania</option>
+                            </select>
+                          </div>
+                          <div class="col-2">
+                            <p class="mb-2">CAP</p>
+                            <input type="text" class="form-control">
+                          </div>
+                        </div>
+                      </div>
+                      <!-- Foto -->
+                      <div class="container-fluid mb-4">
+                        <p class="mb-2">Foto</p>
+                        <input type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
+                      </div>
+                      <!-- checkbox -->
+                      <div class="container-fluid mb-3">
+                        <div class="select-to-go">
+                          <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                              Seleziona per proseguire
+                            </label>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- buttons -->
+                      <div class="container-fluid">
+                        <div class="buttons">
+                          <button type="button" class="btn btn-primary">Salva</button>
+                          <button type="button" class="btn btn-warning">Svuota</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- fine offcanvas -->
               </div>
             </div>
             <!-- seconda colonna -->
@@ -180,7 +300,7 @@
                             </span>
                           </div>
                         </th>
-                        <td >17 Febbraio 2023</td>
+                        <td>17 Febbraio 2023</td>
                         <td>20%</td>
                         <td><span class="badge text-bg-warning text-light">Progress</span></td>
                         <td>
@@ -200,7 +320,7 @@
                             </span>
                           </div>
                         </th>
-                        <td >18 Febbraio 2023</td>
+                        <td>18 Febbraio 2023</td>
                         <td>20%</td>
                         <td><span class="badge text-bg-success">Done</span></td>
                         <td>
@@ -220,7 +340,7 @@
                             </span>
                           </div>
                         </th>
-                        <td >19 Febbraio 2023</td>
+                        <td>19 Febbraio 2023</td>
                         <td>20%</td>
                         <td><span class="badge text-bg-danger">Failed</span></td>
                         <td>
@@ -240,7 +360,7 @@
                             </span>
                           </div>
                         </th>
-                        <td >20 Febbraio 2023</td>
+                        <td>20 Febbraio 2023</td>
                         <td>20%</td>
                         <td><span class="badge text-bg-success">Done</span></td>
                         <td>
@@ -260,7 +380,7 @@
                             </span>
                           </div>
                         </th>
-                        <td >21 Febbraio 2023</td>
+                        <td>21 Febbraio 2023</td>
                         <td>20%</td>
                         <td><span class="badge text-bg-danger">Failed</span></td>
                         <td>
@@ -280,14 +400,14 @@
                             </span>
                           </div>
                         </th>
-                        <td >22 Febbraio 2023</td>
+                        <td>22 Febbraio 2023</td>
                         <td>20%</td>
                         <td><span class="badge text-bg-success">Done</span></td>
                         <td>
                           <i class="fa-solid fa-pencil border p-2"></i>
                           <i class="fa-solid fa-trash border p-2"></i>
                         </td>
-                      </tr>                                          
+                      </tr>
                     </tbody>
                   </table>
                 </div>
@@ -297,40 +417,52 @@
               <!-- inizio faq -->
               <div class="wrapper">
                 <div class="title-component">
-                  <h2 class="text-uppercase">f.a.q</h2>
+                  <h2 class="text-uppercase">f.a.q.</h2>
                 </div>
                 <div class="faq">
                   <div class="accordion accordion-flush" id="accordionFlushExample">
                     <div class="accordion-item">
                       <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                         Come aggiungere un nuovo studente?
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                          data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                          Come aggiungere un nuovo studente?
                         </button>
                       </h2>
-                      <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                      <div id="flush-collapseOne" class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam possimus quos mollitia eum voluptatem facilis quo saepe. Unde, odit similique.
+                          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam possimus quos mollitia eum
+                          voluptatem facilis quo saepe. Unde, odit similique.
                         </div>
                       </div>
                     </div>
                     <div class="accordion-item">
                       <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                          data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                           Come posso accedere alle informazioni del mio account?
                         </button>
                       </h2>
-                      <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, nihil repellat voluptatum debitis soluta doloremque magnam maiores consequuntur quisquam dolorum.</div>
+                      <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, nihil
+                          repellat voluptatum debitis soluta doloremque magnam maiores consequuntur quisquam dolorum.
+                        </div>
                       </div>
                     </div>
                     <div class="accordion-item">
                       <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                          data-bs-target="#flush-collapseThree" aria-expanded="false"
+                          aria-controls="flush-collapseThree">
                           Posso usare questa dashboard da mobile?
                         </button>
                       </h2>
-                      <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae id excepturi illo voluptatibus perferendis perspiciatis ullam ad esse expedita provident!</div>
+                      <div id="flush-collapseThree" class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+                          id excepturi illo voluptatibus perferendis perspiciatis ullam ad esse expedita provident!
+                        </div>
                       </div>
                     </div>
                   </div>
