ADD-Hover sulla table

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <!-- searchbar -->
     <div class="header-searchbar flex-grow-1">
-      <input type="search" class="w-100 py-2" placeholder=" Prova a cercare: Lezioni di Laravel">
+      <input type="search" class="w-100 py-2 ps-5" placeholder=" Prova a cercare: Lezioni di Laravel">
       <span class="search-icon"><i class="fa-solid fa-magnifying-glass"></i></span>
     </div>
     <!-- icone header -->
